khat-birthday.html

--- a/Click here to download birthday_site.html
+++ b/Click here to download birthday_site.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <div class="confetti"></div>
-    <h1>🎉 Happy Birthday! 🎂</h1>
+    <h1>🎉 Happy Birthday khatheeja! 🎂</h1>
     <div class="input-container">
         <label for="birthdate">Enter your birthdate:</label><br>
         <input type="date" id="birthdate">
@@ -74,7 +74,7 @@
     </div>
     <div id="ageDisplay"></div>
     <div class="message">
-        Wishing you the happiest of birthdays! May your day be filled with joy, love, and all your favorite things. You’re special, and today is all about you. 🎈💖
+        Wishing you the happiest of birthdays! May your day be filled with joy, love, and all your favorite things. You’re special,i will never forget you  and today is all about you. 🎈💖
     </div>
 
     <script>
